Make messagemaker input mode aware